# CyberHackathon-Project

./: .env  .gitignore  README.md  demo_investigation.py  investigation_report_922027456759.txt  main.py  pyproject.toml
Generator/: data_summary_24h_20250824_021654.txt  ipdr_generator.py  main.py  realistic_ipdr_24h_20250824_021654.csv  realistic_users_24h_20250824_021654.csv  user_generator.py
Generator/models/: ipdr_model.py  user_model.py
Generator/utils/: config.py
app/core/: config.py  database.py  logger.py
app/crud/: __init__.py  base.py  ipdr_crud.py  user_crud.py
app/handlers/: base_handler.py  demo_handler.py  investigation_handler.py  load_data_handler.py  suspicious_analysis_handler.py
app/models/: ipdr_log_model.py  user_model.py
app/operators/: base_parser.py  dummy_parser.py  ipdr_log_parser.py
app/services/: __init__.py  base_service.py  geoip_service.py  investigation_service.py  ipdr_service.py  user_service.py
data/: data.db
docs/: API_REFERENCE.md  ARCHITECTURE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  SECURITY_ASSESSMENT.md  WORKFLOW.md
reports/: README.md  suspicious_analysis_report.txt
