[project]
name = "hackathon-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.2.1",
    "pandas>=2.2.0",
    "networkx>=3.2.1",
    "matplotlib>=3.8.2",
    "faker>=24.4.0",
    "geoip2>=5.1.0",
]
